src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__directory_in_callable_position_partial__full_name.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight_with_request(\"mydir\",\nHighlightingRequest::default().with_autocd(false).with_pwd(cfg.pwd.as_str()),)?"
---
mydir

0  5  `mydir`  CALLABLE `mydir`
