src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__directory_in_callable_position_partial__partial_dotslash_name.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight_with_request(\"./myd\",\nHighlightingRequest::default().with_autocd(false).with_pwd(cfg.pwd.as_str()),)?"
---
./myd

0  5  `./myd`  CALLABLE `./myd`
